# zuko

./: .gitignore  .~lock.hardware-bom.ods#  3D-printing-notes.txt  LICENSE  README.md  assembly_bom_notes.txt  bom.ods  design-notes.txt  future-improvements.txt  hardware-bom.ods  scratch.txt  setup-notes.txt  to-do.txt  tool-list.txt
cad/: README.md
cad/v1/: _ROBO_FRONT_FRAME.DXF
diagrams/: linked-leg-kinematic-diagram-simplified.drawio  linked-leg-kinematic-diagram.drawio
docs/: 3D-printing-notes.txt  README.md  ROS2-RPi-setup.txt  RPi-username-and-password.txt  assembling.txt  bom.ods  bom.xlsx  print-times-and-weights.ods  print-times-and-weights.xlsx  ros2-commands.txt  to-do.txt  todo.txt  tool-list.txt  tools.txt
firmware/: README.md  platformio.ini
firmware/Zuko/: platformio.ini
firmware/src/: main.cpp  main.h
images/: README.md
images/v2.1/: README.md
pcbs/: README.md
pcbs/battery-board/: battery-board.kicad_pcb  battery-board.kicad_prl  battery-board.kicad_pro  battery-board.kicad_sch  battery-board.step  fp-info-cache
pcbs/diptrace/: battery-holder.dch  battery-holder.dip  notes.txt  teensy-controller.dch  (+5 more)
quad_ws/: README.md
quad_ws/src/quad_udrf/: CMakeLists.txt  README.md  package.xml
quad_ws/src/quad_udrf/launch/: display.launch.py
quad_ws/src/quad_udrf/rviz/: urdf.rviz
quad_ws/src/quad_udrf/stl/: README.md  butt.stl  center_back.stl  center_front.stl  face.stl  side_left.stl  side_right.stl  tail.stl
quad_ws/src/quad_udrf/urdf/: zuko.urdf.xacro
script/: free-body-2.drawio  kintest2.m  kintest_myvars.m
stl/: README.md
(+243 files in other folders)
